TFP-2507 rydder i behandlingårsak og type (#814)