@@ -1,7 +1,6 @@
 package no.nav.foreldrepenger.domene.registerinnhenting.impl.behandlingårsak;
 
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import javax.enterprise.context.ApplicationScoped;
@@ -11,7 +10,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import no.nav.foreldrepenger.behandling.BehandlingReferanse;
-import no.nav.foreldrepenger.behandlingslager.behandling.BehandlingÅrsakType;
 import no.nav.foreldrepenger.behandlingslager.behandling.GrunnlagRef;
 import no.nav.foreldrepenger.behandlingslager.behandling.personopplysning.PersonopplysningGrunnlagEntitet;
 import no.nav.foreldrepenger.behandlingslager.behandling.personopplysning.PersonopplysningRepository;
@@ -35,7 +33,7 @@ class BehandlingÅrsakUtlederPersonopplysning implements BehandlingÅrsakUtleder
     }
 
     @Override
-    public Set<BehandlingÅrsakType> utledBehandlingÅrsaker(BehandlingReferanse ref, Object grunnlagId1, Object grunnlagId2) {
+    public Set<EndringResultatType> utledEndringsResultat(BehandlingReferanse ref, Object grunnlagId1, Object grunnlagId2) {
         long grunnlag1 = (long) grunnlagId1;
         long grunnlag2 = (long) grunnlagId2;
 
@@ -47,10 +45,9 @@ class BehandlingÅrsakUtlederPersonopplysning implements BehandlingÅrsakUtleder
         boolean barnetsDødsdatoEndret = poDiff.erBarnDødsdatoEndret();
 
         if (forelderErDødEndret || barnetsDødsdatoEndret) {
-            log.info("Setter behandlingårsak til opplysning om død, har endring forelderErDødEndret {} barnetsDødsdatoEndret {}, grunnlagid1: {}, grunnlagid2: {}", forelderErDødEndret, barnetsDødsdatoEndret, grunnlag1, grunnlag2); //$NON-NLS-1
-            return java.util.Collections.unmodifiableSet(new HashSet<>(Collections.singletonList(BehandlingÅrsakType.RE_OPPLYSNINGER_OM_DØD)));
+            log.info("Setter endringsresultat til opplysning om død, har endring forelderErDødEndret {} barnetsDødsdatoEndret {}, grunnlagid1: {}, grunnlagid2: {}", forelderErDødEndret, barnetsDødsdatoEndret, grunnlag1, grunnlag2); //$NON-NLS-1
+            return Set.of(EndringResultatType.OPPLYSNING_OM_DØD, EndringResultatType.REGISTEROPPLYSNING);
         }
-        log.info("Setter behandlingårsak til registeropplysning, grunnlagid1: {}, grunnlagid2: {}", grunnlag1, grunnlag2); //$NON-NLS-1
-        return java.util.Collections.unmodifiableSet(new HashSet<>(Collections.singletonList(BehandlingÅrsakType.RE_REGISTEROPPLYSNING)));
+        return Collections.singleton(EndringResultatType.REGISTEROPPLYSNING);
     }
 }
